--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
+    "eslint": "^8.21.0",
     "express": "^4.18.1",
     "ipfs-core": "^0.15.4",
     "jsonwebtoken": "^8.5.1",
@@ -34,6 +35,9 @@
     "web3": "^1.7.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.19",
+    "prettier": "2.7.1"
   }
 }
