--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/UXMUnderGraduate/22-S-Backend#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "eslint": "^8.21.0",
     "express": "^4.18.1",
+    "form-data": "^4.0.0",
     "ipfs-core": "^0.14.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
