--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "bloom-filters": "^3.0.0",
     "dotenv": "^16.0.1",
     "eslint": "^8.21.0",
     "express": "^4.18.1",
