--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
   },
   "env": {
     "browser": false,
-    "node": true
+    "node": true,
+    "es6": true
   },
   "ignorePatterns": ["node_modules/"],
   "rules": {
