feat: nodemon 재/시작 실행 커맨드 추가

--- a/package.json
+++ b/package.json
@@ -42,5 +42,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.19",
     "prettier": "2.7.1"
+  },
+  "nodemonConfig": {
+    "events": {
+      "restart": "rmdir \"%USERPROFILE%\\.jsipfs\\repo.lock\"",
+      "start": "rmdir \"%USERPROFILE%\\.jsipfs\\repo.lock\"",
+      "crash": "rmdir \"%USERPROFILE%\\.jsipfs\\repo.lock\""
+    }
   }
 }
