--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bloom-filters": "^3.0.0",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "eslint": "^8.21.0",
     "express": "^4.18.1",
@@ -48,6 +49,9 @@
       "restart": "rmdir \"%USERPROFILE%\\.jsipfs\\repo.lock\"",
       "start": "rmdir \"%USERPROFILE%\\.jsipfs\\repo.lock\"",
       "crash": "rmdir \"%USERPROFILE%\\.jsipfs\\repo.lock\""
-    }
+    },
+    "ignore": [
+      "bloom.json"
+    ]
   }
 }
