--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
   "env": {
     "browser": false,
     "node": true,
-    "es6": true
+    "es6": true,
+    "es2020": true
   },
   "ignorePatterns": ["node_modules/"],
   "rules": {
