--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: UXMUnderGraduate/22-S-Backend@main
+      - uses: actions/checkout@v3
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
