--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint": "^8.21.0",
     "express": "^4.18.1",
     "form-data": "^4.0.0",
-    "ipfs-core": "^0.14.3",
+    "ipfs-http-client": "^56.0.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
